2011-03-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/*.Rout.save: update after R-devel's  "scientific()" patch.
	* DESCRIPTION (Version): 1.13.4

2011-02-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.13.3

2010-12-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/ellipsoidhull.R, *: use "full argument names"

2010-11-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/clara.q (clara): enforce  sampsize > k {as the help file always said};
	allow to disable 'DUP=FALSE' via env variable.

2010-11-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/clara.c (cl_clara): inserting rand_k into nsel[]: simplified
	and avoiding (typically inconsequential) out_of_bound array access.

2010-10-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.13.2  ;  Enhances: MASS

	* src/cluster.h, src/daisy.f, src/mona.f:
	* src/init.c (FortEntries): s/cl_/cl/ for now,
	as some f77/g77 setups cannot deal with it correctly.

2010-06-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.13.1

2010-06-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/daisy.Rd: add our *generalized* Gower formula (LaTeX), and
	update the detailled description accordingly.

2010-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.13.0

	* src/daisy.f (cl_daisy): renamed from daisy
	* src/init.c, src/*.[chf]: renamed others, so we can use
	* NAMESPACE (useDynLib): .registration = TRUE

2010-05-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/daisy.q (daisy): using variable weights (for gower).
	* src/daisy.f: ditto

2010-03-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.12.3
	* R/plothier.q (bannerplot): do not use formals(pretty)

2009-12-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/daisy.Rd: fix page number for Gower (1971) reference.

2009-10-05  Martin Maechler  <maechler@stat.math.ethz.ch>
